--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "description": "Molten is a Salt Web API UI written in React. ",
   "main": "app.js",
-  "repository" :
-      {
-        "type" : "git",
-        "url" : "https://github.com/martinhoefling/molten.git"
-      },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/martinhoefling/molten.git"
+  },
   "scripts": {
     "test": "echo \"No tests yet\" && exit 0",
     "build-dev": "webpack --progress --profile --colors",
+    "watch": "webpack --progress --profile --colors --watch",
     "build": "webpack --optimize-minimize --optimize-occurence-order --optimize-dedupe --progress --profile --colors",
     "start": "npm run serve | npm run dev",
     "serve": "./node_modules/.bin/http-server -p 8080",
@@ -26,14 +26,15 @@
     "fluxxor": "^1.5.4",
     "lodash": "^3.9.3",
     "material-ui": "^0.10.4",
+    "moment": "^2.10.6",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
     "superagent": "^1.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^4.0.10",
     "babel-core": "^5.4.7",
+    "babel-eslint": "^4.0.10",
     "babel-loader": "^5.1.3",
     "css-loader": "^0.16.0",
     "eslint": "^1.2.1",
@@ -41,6 +42,8 @@
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "http-server": "^0.8.0",
     "jscs": "^2.1.0",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
     "underscore.string": "^3.1.1",
