--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/martinhoefling/molten.git"
   },
   "scripts": {
-    "test": "echo \"No tests yet\" && exit 0",
+    "test": "NODE_PATH='./app' jest",
     "build-dev": "webpack --progress --profile --colors",
     "watch": "webpack --progress --profile --colors --watch",
     "build": "webpack --optimize-minimize --optimize-occurence-order --optimize-dedupe --progress --profile --colors",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-eslint": "^4.0.10",
+    "babel-jest": "^5.3.0",
     "babel-loader": "^5.1.3",
     "css-loader": "^0.16.0",
     "eslint": "^1.2.1",
@@ -42,6 +43,7 @@
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.8.2",
     "http-server": "^0.8.0",
+    "jest-cli": "^0.5.0",
     "jscs": "^2.1.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
@@ -50,5 +52,24 @@
     "underscore.string": "^3.1.1",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
+  },
+  "jest": {
+      "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+      "unmockedModulePathPatterns": [
+          "<rootDir>/node_modules/react"
+      ],
+      "moduleFileExtensions": [
+          "js",
+          "json",
+          "jsx"
+      ],
+      "testFileExtensions": [
+          "js",
+          "jsx"
+      ],
+      "testDirectoryName": "app",
+      "testPathDirs": [
+          "<rootDir>/tests/"
+      ]
   }
 }
