--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,6 @@
     },
     "rules": {
         "react/jsx-boolean-value": 0,
-        "react/jsx-quotes": 2,
         "react/jsx-no-undef": 2,
         "react/jsx-sort-props": 0,
         "react/jsx-sort-prop-types": 0,
@@ -37,6 +36,7 @@
         "react/react-in-jsx-scope": 2,
         "react/self-closing-comp": 2,
         "react/wrap-multilines": 0,
+        "jsx-quotes": [2, "prefer-single"],
         "strict": 2,
         "semi": 2
 
