--- a/package.json
+++ b/package.json
@@ -22,36 +22,36 @@
   "author": "Martin Hoefling",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.1.2",
+    "classnames": "^2.1.3",
     "fluxxor": "^1.7.3",
-    "lodash": "^3.9.3",
-    "material-ui": "^0.11.0",
+    "lodash": "^3.10.1",
+    "material-ui": "^0.11.1",
     "moment": "^2.10.6",
     "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react-router": "^1.0.0-rc1",
     "react-tap-event-plugin": "^0.1.7",
-    "superagent": "^1.2.0"
+    "superagent": "^1.4.0"
   },
   "devDependencies": {
-    "babel-core": "^5.4.7",
-    "babel-eslint": "^4.1.1",
+    "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-jest": "^5.3.0",
-    "babel-loader": "^5.1.3",
+    "babel-loader": "^5.3.2",
     "css-loader": "^0.18.0",
-    "eslint": "^1.2.1",
-    "eslint-plugin-react": "^3.3.1",
+    "eslint": "^1.5.0",
+    "eslint-plugin-react": "^3.4.2",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.8.2",
     "http-server": "^0.8.0",
-    "jest-cli": "^0.5.1",
+    "jest-cli": "^0.5.7",
     "jscs": "^2.1.1",
     "less": "^2.5.1",
-    "less-loader": "^2.2.0",
-    "node-libs-browser": "^0.5.2",
-    "style-loader": "^0.12.3",
+    "less-loader": "^2.2.1",
+    "node-libs-browser": "^0.5.3",
+    "style-loader": "^0.12.4",
     "underscore.string": "^3.2.2",
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.9.0"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.11.0"
   },
   "jest": {
       "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
