--- a/.eslintrc
+++ b/.eslintrc
@@ -32,14 +32,14 @@
         "react/no-did-update-set-state": 2,
         "react/no-multi-comp": 2,
         "react/no-unknown-property": 1,
-        "react/prop-types": 1,
+        "react/prop-types": [2, { "ignore": ["location", "children"] }],
         "react/react-in-jsx-scope": 2,
         "react/self-closing-comp": 2,
         "react/wrap-multilines": 0,
         "jsx-quotes": [2, "prefer-single"],
         "strict": 2,
-        "semi": 2
-
+        "semi": 2,
+        "no-unused-vars": 2
     },
     "plugins": [
         "react"
