--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "classnames": "^2.1.3",
     "fluxxor": "^1.7.3",
+    "history": "^1.9.1",
     "lodash": "^3.10.1",
     "material-ui": "^0.11.1",
     "moment": "^2.10.6",
@@ -54,22 +55,22 @@
     "webpack-dev-server": "^1.11.0"
   },
   "jest": {
-      "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-      "unmockedModulePathPatterns": [
-          "<rootDir>/node_modules/react"
-      ],
-      "moduleFileExtensions": [
-          "js",
-          "json",
-          "jsx"
-      ],
-      "testFileExtensions": [
-          "js",
-          "jsx"
-      ],
-      "testDirectoryName": "app",
-      "testPathDirs": [
-          "<rootDir>/tests/"
-      ]
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx"
+    ],
+    "testFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "testDirectoryName": "app",
+    "testPathDirs": [
+      "<rootDir>/tests/"
+    ]
   }
 }
