Add global config for tests

--- a/package.json
+++ b/package.json
@@ -71,6 +71,12 @@
     "testDirectoryName": "app",
     "testPathDirs": [
       "<rootDir>/tests/"
-    ]
+    ],
+    "globals": {
+      "CONFIG": {
+        "APP_BASE_URL": "/molten",
+        "API_BASE_URL": ""
+      }
+    }
   }
 }
