--- a/vagrant/salt/master.d/custom.conf
+++ b/vagrant/salt/master.d/custom.conf
@@ -1,6 +1,6 @@
 file_roots:
   base:
-    - /vagrant/demo/example/salt-states
+    - /vagrant/vagrant/example/salt-states
 
 external_auth:
   pam:
@@ -19,3 +19,14 @@ rest_cherrypy:
   static_path: /assets
   app: /molten/index.html
   app_path: /molten
+
+lxc.container_profile:
+  lxc-ubuntu-default:
+    template: ubuntu
+
+lxc.network_profile:
+  lxc-default:
+    eth0:
+      link: virbr0
+      type: veth
+      flags: up
