--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "author": "Martin Hoefling",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.1.3",
+    "classnames": "^2.2.0",
     "fluxxor": "^1.7.3",
-    "history": "^1.9.1",
+    "history": "^1.12.5",
     "lodash": "^3.10.1",
-    "material-ui": "^0.12.1",
+    "material-ui": "^0.13.0",
     "moment": "^2.10.6",
-    "react": "^0.13.3",
-    "react-router": "^1.0.0-rc1",
-    "react-tap-event-plugin": "^0.1.7",
+    "react": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0-rc3",
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "^3.0.3",
     "superagent": "^1.4.0"
   },
   "devDependencies": {
@@ -38,21 +40,23 @@
     "babel-eslint": "^4.1.3",
     "babel-jest": "^5.3.0",
     "babel-loader": "^5.3.2",
-    "css-loader": "^0.18.0",
-    "eslint": "^1.5.0",
-    "eslint-plugin-react": "^3.4.2",
+    "css-loader": "^0.21.0",
+    "eslint": "^1.7.3",
+    "eslint-plugin-react": "^3.6.3",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.8.2",
     "http-server": "^0.8.0",
     "jest-cli": "^0.5.7",
-    "jscs": "^2.1.1",
-    "less": "^2.5.1",
+    "jscs": "^2.3.5",
+    "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
-    "style-loader": "^0.12.4",
+    "redux-devtools": "^2.1.5",
+    "redux-thunk": "^1.0.0",
+    "style-loader": "^0.13.0",
     "underscore.string": "^3.2.2",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.11.0"
+    "webpack-dev-server": "^1.12.1"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
