Fix lxc container creation

--- a/vagrant/salt/cloud.profiles.d/ubuntu.conf
+++ b/vagrant/salt/cloud.profiles.d/ubuntu.conf
@@ -3,4 +3,11 @@ ubuntu-lxc:
   lxc_profile: lxc-ubuntu-default
   network_profile: lxc-default
   minion:
-    master: 192.168.122.1
+    master: localhost
+  lxc_profile:
+    template: download
+    options:
+      release: trusty
+      arch: amd64
+  image: ubuntu
+  script_args: -P
