--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.3",
     "redux-logger": "^2.0.4",
+    "redux-router": "^1.0.0-beta3",
+    "redux-devtools": "^2.1.5",
+    "redux-thunk": "^1.0.0",
     "reselect": "^2.0.0",
     "superagent": "^1.4.0"
   },
@@ -53,8 +56,6 @@
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
-    "redux-devtools": "^2.1.5",
-    "redux-thunk": "^1.0.0",
     "style-loader": "^0.13.0",
     "underscore.string": "^3.2.2",
     "webpack": "^1.12.2",
