Improved cloud (lxc) vm. Bootstraping is still not working but container comes up.

--- a/vagrant/salt/cloud.profiles.d/ubuntu.conf
+++ b/vagrant/salt/cloud.profiles.d/ubuntu.conf
@@ -3,7 +3,7 @@ ubuntu-lxc:
   lxc_profile: lxc-ubuntu-default
   network_profile: lxc-default
   minion:
-    master: localhost
+    master: 192.168.122.1
   lxc_profile:
     template: download
     options:
