--- a/vagrant/salt/minion.d/custom.conf
+++ b/vagrant/salt/minion.d/custom.conf
@@ -1,2 +1,13 @@
 id: themaster
 master: localhost
+
+lxc.container_profile:
+  lxc-ubuntu-default:
+    template: ubuntu
+
+lxc.network_profile:
+  lxc-default:
+    eth0:
+      link: virbr0
+      type: veth
+      flags: up
