--- a/package.json
+++ b/package.json
@@ -24,41 +24,41 @@
   "dependencies": {
     "classnames": "^2.2.0",
     "fluxxor": "^1.7.3",
-    "history": "^1.12.5",
+    "history": "^1.13.1",
     "lodash": "^3.10.1",
-    "material-ui": "^0.13.0",
+    "material-ui": "^0.13.2",
     "moment": "^2.10.6",
-    "react": "^0.14.0",
+    "react": "^0.14.2",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0-rc3",
+    "react-router": "^1.0.0",
     "react-tap-event-plugin": "^0.2.1",
-    "redux": "^3.0.3",
+    "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
-    "redux-router": "^1.0.0-beta3",
+    "redux-router": "^1.0.0-beta4",
     "redux-devtools": "^2.1.5",
     "redux-thunk": "^1.0.0",
-    "reselect": "^2.0.0",
+    "reselect": "^2.0.1",
     "superagent": "^1.4.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^4.1.5",
     "babel-jest": "^5.3.0",
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.21.0",
-    "eslint": "^1.7.3",
-    "eslint-plugin-react": "^3.6.3",
+    "babel-loader": "^5.4.0",
+    "css-loader": "^0.23.0",
+    "eslint": "^1.9.0",
+    "eslint-plugin-react": "^3.8.0",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "http-server": "^0.8.0",
-    "jest-cli": "^0.5.7",
-    "jscs": "^2.3.5",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "http-server": "^0.8.5",
+    "jest-cli": "^0.7.1",
+    "jscs": "^2.5.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
     "style-loader": "^0.13.0",
     "underscore.string": "^3.2.2",
-    "webpack": "^1.12.2",
+    "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
   },
   "jest": {
