--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.0",
-    "fluxxor": "^1.7.3",
     "history": "^1.13.1",
     "lodash": "^3.10.1",
     "material-ui": "^0.13.3",
@@ -41,17 +40,18 @@
     "superagent": "^1.4.0"
   },
   "devDependencies": {
-    "babel-core": "^5.8.25",
+    "babel-core": "^6.1.21",
     "babel-eslint": "^4.1.5",
-    "babel-jest": "^5.3.0",
-    "babel-loader": "^5.4.0",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "css-loader": "^0.23.0",
     "eslint": "^1.9.0",
+    "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.9.0",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.9.1",
     "http-server": "^0.8.5",
-    "jest-cli": "^0.7.1",
     "jscs": "^2.5.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
@@ -60,30 +60,5 @@
     "underscore.string": "^3.2.2",
     "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
-  },
-  "jest": {
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "jsx"
-    ],
-    "testFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "testDirectoryName": "app",
-    "testPathDirs": [
-      "<rootDir>/tests/"
-    ],
-    "globals": {
-      "CONFIG": {
-        "APP_BASE_URL": "/molten",
-        "API_BASE_URL": ""
-      }
-    }
   }
 }
