--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ script:
   - "npm run lint"
   - "npm run test"
   - "npm run build"
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfbstart"
