--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/martinhoefling/molten.git"
   },
   "scripts": {
-    "test": "echo 'not implemented yet'",
+    "test": "./node_modules/.bin/karma start",
     "build-dev": "webpack --progress --profile --colors",
     "watch": "webpack --progress --profile --colors --watch",
     "build": "webpack --optimize-minimize --optimize-occurence-order --optimize-dedupe --progress --profile --colors",
@@ -52,7 +52,16 @@
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "^0.9.1",
     "http-server": "^0.8.5",
+    "jasmine-ajax": "^3.2.0",
+    "jasmine-core": "^2.3.4",
     "jscs": "^2.5.1",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.6",
+    "karma-jasmine-ajax": "^0.1.13",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
