--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ script:
   - "npm run build"
 before_install:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfbstart"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
