--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - "0.12"
 script:
   - "npm run lint"
-  - "npm run test"
   - "npm run build"
+  - "./node_modules/.bin/karma start --browsers Firefox --single-run"
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sleep 3
+  - "sleep 3"
