--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 script:
   - "npm run lint"
   - "npm run build"
-  - "./node_modules/.bin/karma start karma.conf.js --browsers Firefox --single-run"
+  - "./node_modules/.bin/karma start --browsers Firefox --single-run"
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
