--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-shortcuts": "^0.7.0",
     "react-tap-event-plugin": "^0.2.1",
     "react-toastr": "^2.2.2",
     "redux": "^3.0.4",
