--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "classnames": "^2.2.1",
     "fbjs": "^0.6.0",
     "lodash": "^3.10.1",
-    "material-ui": "^0.14.0",
+    "material-ui": "^0.14.1",
     "moment": "^2.10.6",
-    "react": "^0.14.5",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-shortcuts": "^0.7.3",
@@ -67,6 +68,8 @@
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
     "style-loader": "^0.13.0",
     "underscore.string": "^3.2.2",
     "webpack": "^1.12.6",
