--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-core": "^6.2.4",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.2.4",
     "babel-preset-react": "^6.2.4",
     "css-loader": "^0.23.0",
