--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 script:
   - "npm run lint"
   - "npm run build"
+  - "npm run release"
   - "./node_modules/.bin/karma start --browsers Firefox --single-run"
 before_install:
   - "export DISPLAY=:99.0"
