--- a/vagrant/salt/master.d/custom.conf
+++ b/vagrant/salt/master.d/custom.conf
@@ -1,21 +1,8 @@
 file_roots:
   base:
     - /vagrant/vagrant/example/salt-states
+    - /vagrant/vagrant/salt/molten-formula
 
-external_auth:
-  pam:
-    test:
-      - .*
-      - '@runner'
-      - '@wheel'
-      - '@jobs'
-
-rest_cherrypy:
-  port: 8000
-  host: 0.0.0.0
-  debug: True
-  disable_ssl: True
-  static: /molten
-  static_path: /assets
-  app: /molten/index.html
-  app_path: /molten
+pillar_roots:
+  base:
+    - /vagrant/vagrant/example/pillar
