--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vagrant/salt/molten-formula"]
 	path = vagrant/salt/molten-formula
-	url = git@github.com:martinhoefling/molten-formula.git
+	url = https://github.com/martinhoefling/molten-formula.git
