--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch": "webpack --progress --profile --colors --watch",
     "build": "webpack --optimize-minimize --optimize-occurence-order --optimize-dedupe --progress --profile --colors",
     "release": "rm -rf release; cp -R dist release; cp index.html release; rm -rf release/molten; webpack --config ./webpack.config.prod.js --optimize-minimize --optimize-occurence-order --optimize-dedupe --progress --profile --colors",
-    "start": "npm run serve | npm run dev",
+    "start": "node devServer.js",
     "serve": "./node_modules/.bin/http-server -p 8080",
     "dev": "webpack-dev-server --progress --colors --port 8090",
     "eslint": "eslint --ext .jsx --ext .js app",
@@ -51,11 +51,13 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.2.4",
     "babel-preset-react": "^6.2.4",
+    "babel-preset-react-hmre": "^1.1.0",
     "css-loader": "^0.23.0",
     "eslint": "^1.9.0",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.1",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^0.9.1",
     "http-server": "^0.8.5",
     "jasmine-ajax": "^3.2.0",
@@ -76,7 +78,8 @@
     "redux-persist": "^1.5.0",
     "style-loader": "^0.13.0",
     "underscore.string": "^3.2.2",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.7.1"
   }
 }
