--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.10.6",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-json-tree": "^0.6.5",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-shortcuts": "^0.7.3",
