--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   "dependencies": {
     "classnames": "^2.2.1",
     "fbjs": "^0.6.0",
-    "lodash": "^3.10.1",
     "history": "^1.17.0",
-    "material-ui": "^0.14.1",
+    "lodash": "^3.10.1",
+    "material-ui": "^0.14.4",
     "moment": "^2.10.6",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-json-tree": "^0.6.5",
+    "react": "^0.14.8",
+    "react-addons-update": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-json-tree": "^0.7.4",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-shortcuts": "^0.7.3",
