Add option to display instead of download and yaml instead of json, closes #27

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.1",
     "fbjs": "^0.6.0",
     "history": "^1.17.0",
+    "json2yaml": "^1.1.0",
     "lodash": "^3.10.1",
     "material-ui": "^0.14.4",
     "moment": "^2.10.6",
