--- a/package.json
+++ b/package.json
@@ -18,71 +18,73 @@
     "dev": "webpack-dev-server --progress --colors --port 8090",
     "eslint": "eslint --ext .jsx --ext .js app",
     "jscs": "jscs app",
-    "lint": "npm run jscs && npm run eslint"
+    "lint": "yarn run jscs && yarn run eslint"
   },
   "author": "Martin Hoefling",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-es2017": "^6.24.1",
     "classnames": "^2.2.1",
-    "fbjs": "^0.6.0",
-    "history": "^1.17.0",
+    "connected-react-router": "^4.1.0",
+    "fbjs": "^0.8.12",
+    "history": "^4.6.1",
     "json2yaml": "^1.1.0",
-    "lodash": "^3.10.1",
-    "material-ui": "^0.14.4",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.17.4",
     "moment": "^2.10.6",
-    "react": "^0.14.8",
-    "react-addons-update": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-json-tree": "^0.7.4",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
-    "react-shortcuts": "^0.7.3",
-    "react-tap-event-plugin": "^0.2.1",
-    "react-toastr": "^2.2.2",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-addons-update": "^15.5.2",
+    "react-dom": "^15.5.4",
+    "react-json-tree": "^0.10.9",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-shortcuts": "^1.4.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-toastr": "martinhoefling/react-toastr",
     "redux": "^3.0.4",
     "redux-devtools": "^3.0.1",
-    "redux-logger": "^2.0.4",
-    "redux-router": "^1.0.0-beta5",
-    "redux-thunk": "^1.0.0",
-    "reselect": "^2.0.1",
-    "superagent": "^1.4.0"
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.2.4",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.2.4",
     "babel-preset-react": "^6.2.4",
     "babel-preset-react-hmre": "^1.1.0",
-    "css-loader": "^0.23.0",
-    "eslint": "^1.9.0",
+    "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.1",
+    "eslint-plugin-react": "^6.10.3",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "http-server": "^0.8.5",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "http-server": "^0.9.0",
     "jasmine-ajax": "^3.2.0",
     "jasmine-core": "^2.3.4",
-    "jscs": "^2.5.1",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.6",
+    "jscs": "^3.0.7",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
     "karma-jasmine-ajax": "^0.1.13",
     "karma-sourcemap-loader": "^0.3.6",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^2.0.3",
     "less": "^2.5.3",
-    "less-loader": "^2.2.1",
-    "node-libs-browser": "^0.5.3",
+    "less-loader": "^4.0.3",
+    "node-libs-browser": "^2.0.0",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
-    "redux-persist": "^1.5.0",
-    "style-loader": "^0.13.0",
+    "redux-persist": "^4.6.0",
+    "style-loader": "^0.16.1",
     "underscore.string": "^3.2.2",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.5.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.7.1"
   }
 }
