--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: node_js
 node_js:
-  - "0.12"
+  - "7.9.0"
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
 script:
-  - "npm run lint"
-  - "npm run build"
-  - "npm run release"
+  - "yarn run lint"
+  - "yarn run build"
+  - "yarn run release"
   - "./node_modules/.bin/karma start --browsers Firefox --single-run"
 before_install:
   - "export DISPLAY=:99.0"
