--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ cache:
   directories:
     - node_modules
 
+services:
+  - xvfb
+
 script:
   - "yarn run lint"
   - "yarn run build-travis"
   - "yarn run release"
   - "./node_modules/.bin/karma start --browsers Firefox --single-run"
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - "sleep 3"
